# Flet_To_Do_APP

./: .gitignore  LICENSE  makefile  pyproject.toml  readme.md
src/: main.py
src/components/: form.py  task.py
src/database/: sqlite_repository.py
src/meta/: test_singelton.py
